﻿= Changes in 1.1 =

== FEATURES ==
- FEATURE: New code highlighting solution
- FEATURE: Bookmarks in the code view
- FEATURE: Charting of grepify results

== NEW PROFILES ==
- ASP.NET: From Richard T

== BUG FIXES ==
- BUG FIX: The case sensitive search was inverted
- BUG FIX: If you specify a regex search it'll ask if you want to escape your search string

= Changes in 1.0 =

== FEATURES ==
- FEATURE: Tabbed browsing - Dan M
- FEATURE: Show file in explorer (right-click in search results) - Dan M
- FEATURE: Double-click or press enter on filename in file browser now opens it in a separate code viewer window
- FEATURE: Code editor window: right-click to send the full path to notes. - Dan M
- FEATURE: Prompt user if you click the x or close and you have windows open - Dan M
- FEATURE: Automatic saving of notes (off by default) - Dan M
- FEATURE: Basic colourization support for language keywords
- FEATURE: Initial support for ignoring comments (see file .\Grepify.Comments\Comments.grepify for definitions) - Richard T
- FEATURE: Regex for file and directory exclusions - Richard T / Tim B
- FEATURE: Version checking

== BUG FIXES ==
- BUG FIX: Overs elections on lines in notes now don't throw an exception when doing right-click - Richard T
- BUG FIX: Sorted out the notes pain so it is such a terrible user experience when scroll bars are about
- BUG FIX: Make clear what the export function needs and why - Dan M

= Changes in Beta 4 =

== FEATURES ==
- FEATURE: File browser now implemented fully
- FEATURE: Search for files and directories in the file browser - Dan M
- FEATURE: You can right-click on the file in the file browser and open in a separate code view window
- FEATURE: Search status in the bottom of the search dialogue - Dan M
- FEATURE: Search results can now be sorted by clicking on the titles - Dan M / Richard T

== BUG FIXES ==
- BUG FIX: Was missing files with unicode in (a whopper of a bug) - Richard T

= Changes in Beta 3 =

== FEATURES ==